--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 li {
     list-style: none;
 }
+a {
+    text-decoration: none;
+}
 .header{
        height: 42px;
        background-color: pink;
@@ -28,5 +31,4 @@ li {
     line-height: 42px;
     font-size: 30px;
     color: royalblue;
-    text-decoration: none;
 }
