--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding:0;
 }
 .w {
-    width:1200px;
+    width:auto;
     margin:auto;
 }
 li {
@@ -13,9 +13,9 @@ a {
     text-decoration: none;
 }
 .header{
-       height: 42px;
-       background-color: pink;
-       margin: 30px auto;
+         height: 194px;
+       background-color:#0161ac;
+       margin: auto auto;
 }
 .nav{
     float: left;
