--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding:0;
 }
 .w {
-    width:auto;
+    width: 1300px;
     margin:auto;
 }
 li {
@@ -13,27 +13,68 @@ a {
     text-decoration: none;
 }
 .header{
-       height: 60px;
+       height: 80px;
        background-color:#0161ac;
        margin: auto auto;
 }
 .nav{
     float: left;
-    margin-left: 60px;
+    margin-left: 500px;
 }
 .nav ul li {
     float: left;
 }
 .nav ul li a {
     display: block;
-    height: 60px;
-    padding: 0 30px;
-    line-height:60px;
-    font-size: 30px;
-    color: white;
+    height: 80px;
+    padding: 0 20px;
+    line-height:80px;
+    font-size: 26px;
+    color:white;
 }
-<!--自我介绍区域 -->
-.content {
-    height: 2100px;
-    background-color:pink;
+
+.content{
+    height: 800px;
+    background-color:#f8f8f8;
 }
+.content .w{
+    height: 800px;
+}
+.text {
+    float: left;
+    width:900px;
+    height:600px;
+    font: 24px/80px;
+    margin: 60px auto;
+}
+.text h1 {
+    font-size: 40px;
+    font-weight: 400;
+    text-align: center;
+    color:#0161ac;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.text h3 {
+    font-size: 22px;
+    font-weight: 400;
+    text-align: center;
+    color: rgb(90, 90, 90);
+    margin-top: 10px;
+}
+.text p{
+    font-size: 22px;
+    font-weight: 400;
+    color: rgb(90, 90, 90);
+    margin: 100px 50px 10px 0px;
+}
+.subimg {
+    float: right;
+    width: 400px;
+    height: auto;
+    margin: 60px auto;
+}
+.subimg ul img{
+    width: 100%;
+}
+
