--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding:0;
 }
 .w {
-    width: 1300px;
+    width:1150px;
     margin:auto;
 }
 li {
@@ -13,10 +13,11 @@ a {
     text-decoration: none;
 }
 .header{
-       height: 80px;
-       background-color:#0161ac;
+       height: 60px;
        margin: auto auto;
+       background: url(images/header.png) no-repeat;
 }
+
 .nav{
     float: left;
     margin-left: 500px;
@@ -28,23 +29,22 @@ a {
     display: block;
     height: 80px;
     padding: 0 20px;
-    line-height:80px;
-    font-size: 26px;
+    line-height:60px;
+    font-size: 20px;
     color:white;
 }
 
 .content{
     height: 800px;
-    background-color:#f8f8f8;
 }
 .content .w{
     height: 800px;
 }
 .text {
     float: left;
-    width:900px;
+    width:700px;
     height:600px;
-    font: 24px/80px;
+    font: 18px/80px;
     margin: 60px auto;
 }
 .text h1 {
@@ -56,25 +56,24 @@ a {
     margin-bottom: 30px;
 }
 .text h3 {
-    font-size: 22px;
+    font-size:18px;
     font-weight: 400;
     text-align: center;
     color: rgb(90, 90, 90);
     margin-top: 10px;
 }
 .text p{
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 400;
     color: rgb(90, 90, 90);
-    margin: 100px 50px 10px 0px;
+    margin: 100px 50px 10px 50px;
 }
 .subimg {
     float: right;
     width: 400px;
     height: auto;
-    margin: 60px auto;
+    margin: 40px auto;
 }
 .subimg ul img{
     width: 100%;
 }
-
