--- a/style.css
+++ b/style.css
@@ -13,27 +13,54 @@ a {
     text-decoration: none;
 }
 .header{
-       height: 60px;
+       height: 50px;
        margin: auto auto;
        background: url(images/header.png) no-repeat;
 }
-
+.main{
+    float: left;
+    margin-left: 200px;
+}
+.main ul li {
+    float: left;
+}
+.main ul li a {
+    display: block;
+    height: 50px;
+    line-height:50px;
+    font-size: 18px;
+    color:white;
+}
 .nav{
     float: left;
-    margin-left: 500px;
+    margin-left: 20px;
 }
 .nav ul li {
     float: left;
 }
 .nav ul li a {
     display: block;
-    height: 80px;
+    height: 50px;
     padding: 0 20px;
-    line-height:60px;
-    font-size: 20px;
+    line-height:50px;
+    font-size: 14px;
     color:white;
 }
-
+.langu{
+    float: right;
+    margin-right: 50px;
+}
+.langu ul li {
+    float: right;
+}
+.langu ul li a {
+    display: block;
+    height: 80px;
+    padding: 0 5px;
+    line-height:60px;
+    font-size: 14px;
+    color:white;
+}
 .content{
     height: 800px;
 }
@@ -42,37 +69,41 @@ a {
 }
 .text {
     float: left;
-    width:700px;
+    width:780px;
     height:600px;
-    font: 18px/80px;
-    margin: 60px auto;
+    font: 20px;
+    margin: 30px auto;
 }
-.text h1 {
-    font-size: 40px;
+.text h2 {
+    font-size: 28px;
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     color:#0161ac;
-    margin-top: 20px;
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .text h3 {
-    font-size:18px;
+    font-size: 20px;
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     color: rgb(90, 90, 90);
-    margin-top: 10px;
+}
+fieldset {
+    border: 0;
+    border-top: 1px solid #0161ac;
+    margin: 10px 0px 20px 0px;
 }
 .text p{
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 400;
     color: rgb(90, 90, 90);
-    margin: 100px 50px 10px 50px;
+    margin: 10px 0px 10px 0px;
 }
 .subimg {
     float: right;
-    width: 400px;
+    width: 360px;
     height: auto;
-    margin: 40px auto;
+    margin: 20px auto;
 }
 .subimg ul img{
     width: 100%;
