--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     width:1300px;
     margin:auto;
 }
+.n {
+    width:800px;
+    margin:auto;
+}
 li {
     list-style: none;
 }
@@ -106,4 +110,21 @@ fieldset {
 }
 .subimg ul img{
     width: 100%;
+}
+.news{
+    float: none;
+    height:350px;
+    background-color: #eeeeee;
+}
+.paper{
+    float:left;
+    width: 1150px;
+    font-size: 22px;
+    font-weight: 400;
+    text-align: center;
+}
+.paper p{
+    width: 800px;
+    color: rgb(90, 90, 90);
+    margin: 10px 0px 10px 0px;
 }
