--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ fieldset {
 .news{
     float: none;
     height:350px;
-    margin: 20px auto;
+    margin: 0px 0px 20px 0px;
     background: url(images/news.png) no-repeat;
 }
 .paper{
