--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ fieldset {
     width: 1150px;
     font-size: 22px;
     font-weight: 400;
-    text-align: center;
+    text-align: left;
 }
 .paper p{
     width: 700px;
